# pred_soccer

./: .gitignore  README.md  TODO  TODO.md  analisando_features.ipynb  create_bet_responsible.ipynb  estudo_correlacoes.ipynb  extract.ipynb  model_oficial.ipynb  probabilidade.ipynb  pyproject.toml  requirements.txt
app/: planejamento.ipynb
app/notebooks/: APP_predictions.ipynb  classe_de_retorno.ipynb  create_new_features.ipynb  explorando_importancia_variavel_modelo.ipynb  paineis.ipynb  test_AB_models.ipynb
etl/: main.py
etl/contracts/: extract_contract.py  transform_contract.py
etl/drivers/: download_csv_footebol_data.py
etl/infra/: database.py
etl/stages/extract/: extract_csv.py
etl/stages/load/: load_csv.py
etl/stages/transform/: transform_csv.py
etl/tests/test_etl/: test_extract_csv.py
features/: ft_df.csv
lixeixa/: extract.ipynb  model_oficial.ipynb
modelagem/eda/: eda.ipynb  probabilidade.ipynb
modelagem/feature_eng/: feature-eng.ipynb  match_analysis.py
modelagem/features/: feature-eng.ipynb
modelagem/features/lixo_data/: ft_df.csv  ft_df_dum.csv
modelagem/settings/: config.py
modelagem/train/: main_trainer.py  model copy-antigo.ipynb  model.ipynb  model_trainer.py
modelagem/train/utils/: train_utils.py
modelagem/utils/: feedback.py  get_data.py  logs.py  metrics.py
models/: feature_order.json  logistic_regression_model.pkl
notebooks/: EDA.ipynb  creation.ipynb  estudo_dask.ipynb  evaluate_model.ipynb  visual_analytics.ipynb
notebooks/analises/: creation.ipynb  estudando_novas_variaveis.ipynb  estudo_dask.ipynb
(+12 files in other folders)
