[tool.poetry]
name = "pred-soccer"
version = "0.1.0"
description = ""
authors = ["guilhermebranddao <guilhermebranddao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.27.1"
ipykernel = "^6.29.5"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
pytest = "^8.3.4"
scikit-learn = "^1.6.0"
xgboost = "^2.1.3"
matplotlib = "^3.10.0"
imblearn = "^0.0"
missingno = "^0.5.2"
yellowbrick = "^1.5"
mplsoccer = "^1.4.0"
taskipy = "^1.14.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
train = "python modelagem/train/main_trainer.py"